--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.18.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.1.0",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
