--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.3"
+    "mongoose": "^5.2.3",
+    "redux-saga": "^0.16.2"
   }
 }
